# entity-generator

./: .gitignore  CMakeLists.txt  README.md
cmake/: RapidJSONConfig.cmake
scripts/: README.md  cleanup-test-patterns  dots_template.json  generate-test-pattern  generate_test_pattern.py  requirements.txt  setup.sh
src/dataset-creator/: CMakeLists.txt  add-data.py  dataset-creator.cpp  dataset-creator.py
src/entity-generator/: CMakeLists.txt  entity-generator.cpp
